[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/options_screen/OptionsScreen.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/fonts/GravityBold8.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://theme/Main.tres" type="Theme" id=3]
[ext_resource path="res://scenes/pause_screen/PauseScreen.gd" type="Script" id=4]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform float blur : hint_range(0, 6) = 0.5;

void fragment() {
	vec4 color = texture(SCREEN_TEXTURE, SCREEN_UV, blur);
	COLOR = color;
}"
custom_defines = ""

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/blur = 0.0

[sub_resource type="DynamicFont" id=3]
size = 48
font_data = ExtResource( 2 )

[node name="PauseScreen" type="CanvasLayer"]
pause_mode = 2
layer = 2
script = ExtResource( 4 )

[node name="DimRect" type="ColorRect" parent="."]
margin_right = 800.0
margin_bottom = 500.0
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DimTween" type="Tween" parent="DimRect"]

[node name="BlurRect" type="ColorRect" parent="."]
material = SubResource( 2 )
margin_right = 800.0
margin_bottom = 500.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BlurTween" type="Tween" parent="BlurRect"]

[node name="MenuContainer" type="MarginContainer" parent="BlurRect"]
visible = false
margin_right = 800.0
margin_bottom = 500.0
theme = ExtResource( 3 )
custom_constants/margin_right = 200
custom_constants/margin_top = 80
custom_constants/margin_left = 200
custom_constants/margin_bottom = 80
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="BlurRect/MenuContainer"]
margin_left = 246.0
margin_top = 133.0
margin_right = 554.0
margin_bottom = 367.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_constants/separation = 20

[node name="MarginContainer" type="MarginContainer" parent="BlurRect/MenuContainer/VBoxContainer"]
margin_right = 308.0
margin_bottom = 78.0
custom_constants/margin_bottom = 30

[node name="TitleLabel" type="Label" parent="BlurRect/MenuContainer/VBoxContainer/MarginContainer"]
margin_left = 28.0
margin_right = 280.0
margin_bottom = 48.0
size_flags_horizontal = 4
custom_fonts/font = SubResource( 3 )
text = "Paused"

[node name="ResumeButton" type="Button" parent="BlurRect/MenuContainer/VBoxContainer"]
margin_left = 66.0
margin_top = 98.0
margin_right = 242.0
margin_bottom = 130.0
focus_neighbour_top = NodePath("../QuitButton")
size_flags_horizontal = 4
text = "Resume"

[node name="OptionsButton" type="Button" parent="BlurRect/MenuContainer/VBoxContainer"]
margin_left = 52.0
margin_top = 150.0
margin_right = 256.0
margin_bottom = 182.0
size_flags_horizontal = 4
text = "Options"

[node name="QuitButton" type="Button" parent="BlurRect/MenuContainer/VBoxContainer"]
margin_top = 202.0
margin_right = 308.0
margin_bottom = 234.0
focus_neighbour_bottom = NodePath("../ResumeButton")
size_flags_horizontal = 4
text = "Leave match"

[node name="OptionsScreen" parent="BlurRect" instance=ExtResource( 1 )]
visible = false
[connection signal="focus_entered" from="BlurRect/MenuContainer/VBoxContainer/ResumeButton" to="." method="_on_button_focus"]
[connection signal="mouse_entered" from="BlurRect/MenuContainer/VBoxContainer/ResumeButton" to="." method="_on_button_focus"]
[connection signal="pressed" from="BlurRect/MenuContainer/VBoxContainer/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="focus_entered" from="BlurRect/MenuContainer/VBoxContainer/OptionsButton" to="." method="_on_button_focus"]
[connection signal="mouse_entered" from="BlurRect/MenuContainer/VBoxContainer/OptionsButton" to="." method="_on_button_focus"]
[connection signal="pressed" from="BlurRect/MenuContainer/VBoxContainer/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="focus_entered" from="BlurRect/MenuContainer/VBoxContainer/QuitButton" to="." method="_on_button_focus"]
[connection signal="mouse_entered" from="BlurRect/MenuContainer/VBoxContainer/QuitButton" to="." method="_on_button_focus"]
[connection signal="pressed" from="BlurRect/MenuContainer/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="back_pressed" from="BlurRect/OptionsScreen" to="." method="_on_OptionsScreen_back_pressed"]
